# RayMol

./: .gitignore  CLAUDE.md  README.md  RayMol_Code_Review_2026-06-27.md  appcast.xml  pyproject.toml  setup.py
.claude/agents/: multiplatform-build-deployer.md  whats-new-preparer.md
.claude/skills/cut-macos-release/: SKILL.md
.claude/skills/cut-macos-release/references/: gotchas.md  (+1 more)
.claude/skills/raymol-download-stats/: SKILL.md  get_stats.py
.claude/skills/raymol-mac-vm/: SKILL.md  raymol-vm-mcp.py
.github/: CODEOWNERS
.github/workflows/: headless-tests.yml  raymol-embedded-tests.yml  release.yml
.playwright-mcp/: page-2026-07-06T17-27-55-446Z.yml  page-2026-07-06T17-29-48-539Z.yml
appkit/: CMakeLists.txt  CMakeLists_iOS.cmake  PyMOL.icns  ios.toolchain.cmake
cmake/: Info.plist.in
data/shaders_metal/: cylinder.metal  ramp.metal  volume.metal
docs/appstore/: listing.md  review-notes.md  sandbox-audit.md
docs/raymol.io/: privacy.md  support.md
docs/release-notes/: v1.2.0.md  v1.2.1.md  v1.3.0.md  v1.3.1.md  v1.4.0.md  v1.5.0.md  v1.5.1.md  v1.5.2.md  v1.6.0.md  v1.6.1.md
docs/superpowers/mocks/: theme-system-mock.html
docs/superpowers/plans/: 2026-06-09-pymol-ipad-metal-mvp.md  2026-06-10-pymol-swiftui-metal-mac-app.md  2026-06-16-raymol-theme-system.md  2026-06-17-raymol-app-store-submission.md  2026-06-22-macos-auto-update.md  2026-07-02-adaptive-cartoon-lod.md  2026-07-02-perf-hud.md  2026-07-05-camera-overlay.md  2026-07-06-camera-controls-photos-strip.md  2026-07-06-multistate-timeline.md
docs/superpowers/specs/: 2026-06-09-pymol-ipad-metal-mvp-design.md  2026-06-11-representation-inspector-design.md  2026-06-16-raymol-theme-system-design.md  2026-06-17-raymol-app-store-submission-design.md  2026-06-22-macos-auto-update-design.md  2026-06-29-move-mode-uiux-design.md  2026-06-30-per-representation-clipping-design.md  2026-06-30-surface-outer-contour-design.md  2026-07-01-timeline-drag-drop-design.md  2026-07-02-adaptive-cartoon-lod-and-display-aware-upscale-design.md  2026-07-02-perf-hud-design.md  2026-07-02-timeline-as-movie-tab-design.md  2026-07-02-unified-timeline-track-design.md  2026-07-03-raymol-mcp-vm-access-design.md  2026-07-03-timeline-right-panel-expand-design.md  2026-07-04-lens-focal-length-control-design.md  2026-07-05-camera-overlay-design.md  2026-07-05-dof-autofocus-design.md  2026-07-06-camera-controls-photos-strip-design.md  2026-07-06-multistate-timeline-design.md  2026-07-06-narrow-macos-inspector-design.md  2026-07-06-whats-new-splash-design.md  2026-07-07-per-atom-transparency-discoverability-design.md
layer0/: Block.cpp  GenericBuffer.cpp  GenericBuffer.h  MetalShaderMgr.h  MetalShaderMgr.mm  ShaderMgr.cpp  Texture.cpp  Texture.h  Triangle.cpp  os_gl.cpp  os_gl.h
layer1/: CGOGL.cpp  CGORenderer.h  Control.cpp  Movie.cpp  Ortho.cpp  PyMOLObject.cpp  PyMOLObject.h  Scene.cpp  SceneRender.cpp  SceneRender.h  ScrollBar.cpp  Seq.cpp  SettingInfo.h  View.cpp  Wizard.cpp
layer2/: GadgetSet.cpp  ObjectMap.cpp  ObjectMesh.cpp  ObjectSlice.cpp  ObjectVolume.cpp  RepAngle.cpp  RepCylBond.cpp  RepDihedral.cpp  RepDistDash.cpp  RepDot.cpp  RepLabel.cpp  RepMesh.cpp  RepNonbonded.cpp  RepRibbon.cpp  RepSphereImmediate.cpp  RepSurface.cpp  RepWireBond.cpp
layer3/: Executive.cpp  Executive.h
layer4/: Cmd.cpp  PopUp.cpp
layer5/: PyMOL.cpp  PyMOL.h  main_appkit.mm  main_ios.cpp
layerGraphics/: CGOGL_REFACTOR_PLAN.md  ImmediateHelper.h  Renderer.h
layerGraphics/gl/: GLVertexBuffer.cpp  GLVertexBuffer.h  GLVertexBuffer_stubs.cpp  RendererGL.cpp  RendererGL.h
layerGraphics/metal/: RendererMetal.h  RendererMetal.mm
modules/pymol/: ai_chat.py  ai_chat_ui.py  ai_pdb_index.py  ai_pdb_search.py  ai_system_prompt.py  ai_tools.py  api.py  appkit_command_panel.py  appkit_inspector.py  appkit_menus.py  appkit_mouse_panel.py  appkit_movie.py  appkit_object_panel.py  appkit_ray_overlay.py  appkit_sequence.py  appkit_settings.py  appkit_theme_preview.py  cmd.py  externing.py  keywords.py  metal_move.py  metal_pick.py  raymol_scenes.py  raymol_theme.py  viewing.py
modules/raymol_mcp/: __init__.py  events.py  mainthread.py  server.py  tools.py
ov/src/: OVreturns.h
scripts/: build_ios_deps.sh  build_numpy_ios.sh  bundle_app.py  bundle_macos_dylibs.py  compile_metal_shaders.py  fetch_ios_python.sh  fetch_macos_python.sh  setup_ios_deps.sh
swiftui/: PyMOLBridge.xcconfig  README.md  archive_appstore.sh  build.sh  build_ios.sh  build_macos.sh  make_dmg.sh  project.yml  publish_release.sh
swiftui/PyMOLViewer/: PrivacyInfo.xcprivacy  RayMol.entitlements  RayMolPython.entitlements
swiftui/PyMOLViewer.xcodeproj/: project.pbxproj
swiftui/PyMOLViewer/Bridge/: PyMOLBridge.h  PyMOLBridge.mm
swiftui/PyMOLViewer/Panels/: ChatPanel.swift  CommandPanel.swift  MCPConnectSheet.swift  MCPDrivingBanner.swift  MCPStatusView.swift  MousePanel.swift  MovieBuilderSheet.swift  MovieExportSheet.swift  ObjectPanel.swift  SequencePanel.swift  ThemeStudioPanel.swift  TimelinePanel.swift  TransportBar.swift
swiftui/PyMOLViewer/Resources/: WhatsNew.README.md  WhatsNew.json
swiftui/PyMOLViewer/Shared/: ContentView.swift  GizmoOverlay.swift  MCPBridge.swift  MCPDesktopInstaller.swift  MCPServerManager.swift  MetalViewport.swift  PyMOLApp.swift  PyMOLEngine.swift  RayMolMain.swift  RayMolUpdater.swift  Theme.swift  ThemeManager.swift  WhatsNewLogic.swift  WhatsNewModal.swift  WhatsNewModel.swift
swiftui/PyMOLViewerUITests/: CameraOverlayUITests.swift  WhatsNewUITests.swift
swiftui/tests/: run_whats_new_logic_test.sh  whats_new_logic_test.swift
testing/tests/: test_ai_chat.py  test_ai_tools.py  test_appkit_command_panel.py  test_appkit_measure.py  test_appkit_menus.py  test_appkit_object_panel.py  test_appkit_ray_overlay.py  test_appkit_sequence.py  test_appkit_sequence_panel.py  test_appkit_settings.py  test_appkit_theme_preview.py  test_inspector_transparency.py  test_mcp_events.py  test_mcp_server.py  test_mcp_tools.py  test_metal_pick.py  test_mouse_panel.py  test_pdb_search.py
testing/tests/jira/: multistate_timeline.py
(+5 files in other folders)
